--- a/index.html
+++ b/index.html
@@ -12,85 +12,85 @@
     <div class="chessBoard">
         <!--8-->
         <div class="square white">
-            <div class="piece rook" color="white">
+            <div class="piece rook" color="black">
                 <img src="BlackRook.png" alt="Rook" />
             </div>
         </div>
         <div class="square black">
-            <div class="piece knight" color="white">
+            <div class="piece knight" color="black">
                 <img src="BlackKnight.png" alt="Knight" />
             </div>
         </div>
         <div class="square white">
-            <div class="piece bishop" color="white">
+            <div class="piece bishop" color="black">
                 <img src="BlackBishop.png" alt="Bishop" />
             </div>
         </div>
         <div class="square black">
-            <div class="piece queen" color="white">
+            <div class="piece queen" color="black">
                 <img src="BlackQueen.png" alt="Queen" />
             </div>
         </div>
         <div class="square white">
-            <div class="piece king" color="white">
+            <div class="piece king" color="black">
                 <img src="BlackKing.png" alt="King" />
             </div>
         </div>
         <div class="square black">
-            <div class="piece bishop" color="white">
+            <div class="piece bishop" color="black">
                 <img src="BlackBishop.png" alt="Bishop" />
             </div>
         </div>
         <div class="square white">
-            <div class="piece knight" color="white">
+            <div class="piece knight" color="black">
                 <img src="BlackKnight.png" alt="Knight" />
             </div>
         </div>
         <div class="square black">
             <div class="coordinate rank whiteText">8</div>
-            <div class="piece rook" color="white">
+            <div class="piece rook" color="black">
                 <img src="BlackRook.png" alt="Rook" />
             </div>
         </div>
         <!--7-->
         <div class="square black">
-            <div class="piece pawn" color="white">
+            <div class="piece pawn" color="black">
                 <img src="BlackPawn.png" alt="Pawn" />
             </div>
         </div>
         <div class="square white">
-            <div class="piece pawn" color="white">
+            <div class="piece pawn" color="black">
                 <img src="BlackPawn.png" alt="Pawn" />
             </div>
         </div>
         <div class="square black">
-            <div class="piece pawn" color="white">
+            <div class="piece pawn" color="black">
                 <img src="BlackPawn.png" alt="Pawn" />
             </div>
         </div>
         <div class="square white">
-            <div class="piece pawn" color="white">
+            <div class="piece pawn" color="black">
                 <img src="BlackPawn.png" alt="Pawn" />
             </div>
         </div>
         <div class="square black">
-            <div class="piece pawn" color="white">
+            <div class="piece pawn" color="black">
                 <img src="BlackPawn.png" alt="Pawn" />
             </div>
         </div>
         <div class="square white">
-            <div class="piece pawn" color="white">
+            <div class="piece pawn" color="black">
                 <img src="BlackPawn.png" alt="Pawn" />
             </div>
         </div>
         <div class="square black">
-            <div class="piece pawn" color="white">
+            <div class="piece pawn" color="black">
                 <img src="BlackPawn.png" alt="Pawn" />
             </div>
         </div>
         <div class="square white">
             <div class="coordinate rank blackText">7</div>
-            <div class="piece pawn" color="white">
+            <div class="piece pawn" color="black">
                 <img src="BlackPawn.png" alt="Pawn" />
             </div>
         </div>
