Cannot take pieces of same colour

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script src="Main.js"></script>
+    <!--<p>It is <span id="currentPlayer"></span> turn.</p>-->
 
     <div class="chessBoard">
         <!--8-->
