--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <script src="Main.js"></script>
     <!--<p>It is <span id="currentPlayer"></span> turn.</p>-->
+    <button id="restartButton">Restart Game</button>
+
 
     <div class="chessBoard">
         <!--8-->
