Save game + button design

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
     <script src="Main.js"></script>
     <!--<p>It is <span id="currentPlayer"></span> turn.</p>-->
-    <button id="restartButton">Restart Game</button>
-
 
     <div class="chessBoard">
         <!--8-->
@@ -234,5 +232,8 @@
             </div>
         </div>
     </div>
+
+    <button class="restart" id="restartButton">Restart Game</button>
+
 </body>
 </html>
