--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="Main.js"></script>
     <!--<p>It is <span id="currentPlayer"></span> turn.</p>-->
 
+
     <div class="chessBoard">
         <!--8-->
         <div class="square white">
@@ -234,6 +235,9 @@
     </div>
 
     <button class="restart" id="restartButton">Restart Game</button>
+    <button class="save" id="saveButton">Save Game</button>
+    <button class="load" id="loadButton">Load Game</button>
+
 
 </body>
 </html>
