History of moves

--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@
     <button class="save" id="saveButton">Save Game</button>
     <button class="load" id="loadButton">Load Game</button>
 
+    <div id="moveHistory" class="history-box"></div>
+
 
 </body>
 </html>
